--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,12 @@ Authors@R: c(
     person("RStudio", role = "cph")
   )
 Description: What the package does (one paragraph).
-Depends: R (>= 3.2.4)
+Depends:
+    R (>= 3.2.4)
 License: GPL-3
 LazyData: true
 URL: https://github.com/hadley/modelr
 BugReports: https://github.com/hadley/modelr/issues
+Imports:
+    magrittr
+RoxygenNote: 5.0.1
