--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,9 +14,11 @@ URL: https://github.com/hadley/modelr
 BugReports: https://github.com/hadley/modelr/issues
 Imports:
     magrittr,
-    purrr,
+    purrr (>= 0.2.1.9000),
     lazyeval (>= 0.1.10.9000),
     tibble
 RoxygenNote: 5.0.1
 Suggests: testthat
-Remotes: hadley/lazyeval
+Remotes:
+    hadley/lazyeval,
+    hadley/purrr
