Better strategy for merging formulas
Now fails when environments differ for non-conflicting symbols as well

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(formulae)
 export(formulas)
 export(seq_range)
 importFrom(magrittr,"%>%")
+importFrom(purrr,"%||%")
 importFrom(purrr,compact)
 importFrom(purrr,map)
 importFrom(purrr,reduce)
