Add some model quality metrics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ export(add_residuals)
 export(fit_with)
 export(formulae)
 export(formulas)
+export(mae)
+export(qae)
+export(rmse)
 export(seq_range)
 importFrom(magrittr,"%>%")
 importFrom(purrr,"%||%")
