--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export("%>%")
 export(add_predictions)
 export(add_predictors)
 export(add_residuals)
+export(bootstrap)
 export(fit_with)
 export(formulae)
 export(formulas)
