New interface for resampling functions
Low level functions have prefix `resample_` and return single resample object, or list of resamples. High level functions don't have common prefix and return tibble.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(as.data.frame,resample)
 S3method(as.integer,resample)
+S3method(dim,resample)
+S3method(obj_sum,resample)
 S3method(print,resample)
 S3method(response,lm)
 export("%>%")
@@ -13,9 +15,11 @@ export(fit_with)
 export(formulae)
 export(formulas)
 export(mae)
-export(partition)
+export(mcmc_cv)
 export(qae)
 export(resample)
+export(resample_bootstrap)
+export(resample_partition)
 export(rmse)
 export(seq_range)
 importFrom(magrittr,"%>%")
@@ -23,3 +27,4 @@ importFrom(purrr,"%||%")
 importFrom(purrr,compact)
 importFrom(purrr,map)
 importFrom(purrr,reduce)
+importFrom(tibble,obj_sum)
