--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,11 @@ export(add_predictions)
 export(add_predictors)
 export(add_residuals)
 export(bootstrap)
+export(crossv_mcmc)
 export(fit_with)
 export(formulae)
 export(formulas)
 export(mae)
-export(mcmc_cv)
 export(qae)
 export(resample)
 export(resample_bootstrap)
