Implement k-fold cross validation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(add_predictions)
 export(add_predictors)
 export(add_residuals)
 export(bootstrap)
+export(crossv_kfold)
 export(crossv_mcmc)
 export(fit_with)
 export(formulae)
