Implement add/gather/spread residuals/predictions
Fixes #2. Fixes #3.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(crossv_mcmc)
 export(fit_with)
 export(formulae)
 export(formulas)
+export(gather_predictions)
+export(gather_residuals)
 export(mae)
 export(qae)
 export(resample)
@@ -23,6 +25,8 @@ export(resample_bootstrap)
 export(resample_partition)
 export(rmse)
 export(seq_range)
+export(spread_predictions)
+export(spread_residuals)
 importFrom(magrittr,"%>%")
 importFrom(purrr,"%||%")
 importFrom(purrr,compact)
