--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Imports:
     purrr (>= 0.2.1.9000),
     lazyeval (>= 0.2.0),
     tibble,
-    broom
+    broom,
+    dplyr
 Suggests:
     testthat
 URL: https://github.com/hadley/modelr
