--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(resample)
 export(resample_bootstrap)
 export(resample_partition)
 export(rmse)
+export(rsquare)
 export(seq_range)
 export(spread_predictions)
 export(spread_residuals)
