Pull response_var out into own file
* Add tests
* Fix bug in implementation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ S3method(as.integer,resample)
 S3method(dim,resample)
 S3method(obj_sum,resample)
 S3method(print,resample)
-S3method(response,default)
+S3method(response_var,default)
 export("%>%")
 export(add_predictions)
 export(add_predictors)
