Implement geom_ref_line
Fixes #11

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Imports:
     broom,
     dplyr
 Suggests:
-    testthat
+    testthat,
+    ggplot2
 URL: https://github.com/hadley/modelr
 BugReports: https://github.com/hadley/modelr/issues
 Remotes:
