--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(formulae)
 export(formulas)
 export(gather_predictions)
 export(gather_residuals)
+export(geom_ref_line)
 export(mae)
 export(qae)
 export(resample)
