--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ export(add_predictors)
 export(add_residuals)
 export(bootstrap)
 export(crossv_kfold)
-export(crossv_mcmc)
+export(crossv_mc)
 export(fit_with)
 export(formulae)
 export(formulas)
