Add model_matrix wrapper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(gather_predictions)
 export(gather_residuals)
 export(geom_ref_line)
 export(mae)
+export(model_matrix)
 export(qae)
 export(resample)
 export(resample_bootstrap)
