Function to find "typical" values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,10 @@ S3method(dim,resample)
 S3method(obj_sum,resample)
 S3method(print,resample)
 S3method(response_var,default)
+S3method(typical,character)
+S3method(typical,factor)
+S3method(typical,logical)
+S3method(typical,numeric)
 export("%>%")
 export(add_predictions)
 export(add_predictors)
@@ -30,6 +34,7 @@ export(rsquare)
 export(seq_range)
 export(spread_predictions)
 export(spread_residuals)
+export(typical)
 importFrom(magrittr,"%>%")
 importFrom(purrr,"%||%")
 importFrom(purrr,compact)
