--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(as.data.frame,resample)
 S3method(as.integer,resample)
 S3method(dim,resample)
 S3method(obj_sum,resample)
+S3method(predictor_vars,default)
 S3method(print,resample)
 S3method(response_var,default)
 S3method(typical,character)
@@ -17,6 +18,7 @@ export(add_residuals)
 export(bootstrap)
 export(crossv_kfold)
 export(crossv_mc)
+export(expand_model)
 export(fit_with)
 export(formulae)
 export(formulas)
