--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,7 @@ export(add_residuals)
 export(bootstrap)
 export(crossv_kfold)
 export(crossv_mc)
-export(expand_model)
+export(data_grid)
 export(fit_with)
 export(formulae)
 export(formulas)
