--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(gather_residuals)
 export(geom_ref_line)
 export(mae)
 export(model_matrix)
+export(mse)
 export(na.warn)
 export(qae)
 export(resample)
