Add stand eval data_grid fxn
Add data_grid_ as a standard evalution version of the NSE function data_grid.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(bootstrap)
 export(crossv_kfold)
 export(crossv_mc)
 export(data_grid)
+export(data_grid_)
 export(fit_with)
 export(formulae)
 export(formulas)
