Import something from broom

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(seq_range)
 export(spread_predictions)
 export(spread_residuals)
 export(typical)
+importFrom(broom,tidy)
 importFrom(magrittr,"%>%")
 importFrom(purrr,"%||%")
 importFrom(purrr,compact)
