Add a mean squared error function (#57)
* Add function to calculate mean squared error

* Add bullet to NEWS.md

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(gather_residuals)
 export(geom_ref_line)
 export(mae)
 export(model_matrix)
+export(mse)
 export(na.warn)
 export(permute)
 export(permute_)
