Add integer and ordered methods for typical
- import stats::quantile
- add tests for typical
- fix docs for typical
- add missing `.Rd` file
- Add dev version; Update news

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,10 @@ S3method(print,resample)
 S3method(response_var,default)
 S3method(typical,character)
 S3method(typical,factor)
+S3method(typical,integer)
 S3method(typical,logical)
 S3method(typical,numeric)
+S3method(typical,ordered)
 export("%>%")
 export(add_predictions)
 export(add_predictors)
@@ -52,4 +54,5 @@ importFrom(purrr,"%||%")
 importFrom(purrr,compact)
 importFrom(purrr,map)
 importFrom(purrr,reduce)
+importFrom(stats,quantile)
 importFrom(tibble,obj_sum)
