Add mape() and rsae()
Closes #33. Thanks to @paulponcet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(gather_predictions)
 export(gather_residuals)
 export(geom_ref_line)
 export(mae)
+export(mape)
 export(model_matrix)
 export(mse)
 export(na.warn)
@@ -43,6 +44,7 @@ export(resample_bootstrap)
 export(resample_partition)
 export(resample_permutation)
 export(rmse)
+export(rsae)
 export(rsquare)
 export(seq_range)
 export(spread_predictions)
