--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,12 @@ language: R
 sudo: false
 cache: packages
 
+r:
+- 3.1
+- 3.2
+- oldrel
+- release
+- devel
+
 after_success:
   - Rscript -e 'covr::codecov()'
