Add new website

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ Suggests:
     ggplot2,
     covr,
     compiler
-URL: https://github.com/hadley/modelr
+URL: https://modelr.tidyverse.org, https://github.com/hadley/modelr
 BugReports: https://github.com/hadley/modelr/issues
 RoxygenNote: 6.0.1.9000
 Roxygen: list(markdown = TRUE)
