--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,30 +1,30 @@
 Package: modelr
-Version: 0.1.1.9000
 Title: Modelling Functions that Work with the Pipe
-Description: Functions for modelling that help you seamlessly integrate
-    modelling into a pipeline of data manipulation and visualisation.
+Version: 0.1.1.9000
 Authors@R: c(
     person("Hadley", "Wickham", , "hadley@rstudio.com", role = c("aut", "cre")),
     person("RStudio", role = "cph")
   )
+Description: Functions for modelling that help you seamlessly integrate
+    modelling into a pipeline of data manipulation and visualisation.
 License: GPL-3
-LazyData: true
-Depends:
-    R (>= 3.1)
-Imports:
-    magrittr,
-    purrr (>= 0.2.2),
-    lazyeval (>= 0.2.0),
-    tibble,
-    broom,
-    dplyr,
-    tidyr (>= 0.8.0)
-Suggests:
-    testthat,
-    ggplot2,
-    covr,
-    compiler
 URL: https://modelr.tidyverse.org, https://github.com/hadley/modelr
 BugReports: https://github.com/hadley/modelr/issues
-RoxygenNote: 6.0.1.9000
+Depends: 
+    R (>= 3.1)
+Imports: 
+    broom,
+    dplyr,
+    lazyeval (>= 0.2.0),
+    magrittr,
+    purrr (>= 0.2.2),
+    tibble,
+    tidyr (>= 0.8.0)
+Suggests: 
+    compiler,
+    covr,
+    ggplot2,
+    testthat
+LazyData: true
 Roxygen: list(markdown = TRUE)
+RoxygenNote: 6.0.1.9000
