--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,9 +50,9 @@ export(seq_range)
 export(spread_predictions)
 export(spread_residuals)
 export(typical)
+import(rlang)
 importFrom(broom,tidy)
 importFrom(magrittr,"%>%")
-importFrom(purrr,"%||%")
 importFrom(purrr,compact)
 importFrom(purrr,map)
 importFrom(purrr,reduce)
