--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # CODEOWNERS for modelr
 # https://www.tidyverse.org/development/understudies
-* @hadley @topepo
+.github/CODEOWNERS @hadley @topepo
