--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,8 @@ Authors@R: c(
 Description: Functions for modelling that help you seamlessly integrate
     modelling into a pipeline of data manipulation and visualisation.
 License: GPL-3
-URL: https://modelr.tidyverse.org, https://github.com/hadley/modelr
-BugReports: https://github.com/hadley/modelr/issues
+URL: https://modelr.tidyverse.org, https://github.com/tidyverse/modelr
+BugReports: https://github.com/tidyverse/modelr/issues
 Depends: 
     R (>= 3.1)
 Imports: 
