--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,19 @@
 Package: modelr
 Title: Modelling Functions that Work with the Pipe
 Version: 0.1.2.9000
-Authors@R: c(
-    person("Hadley", "Wickham", , "hadley@rstudio.com", role = c("aut", "cre")),
-    person("RStudio", role = "cph")
-  )
-Description: Functions for modelling that help you seamlessly integrate
-    modelling into a pipeline of data manipulation and visualisation.
+Authors@R: 
+    c(person(given = "Hadley",
+             family = "Wickham",
+             role = c("aut", "cre"),
+             email = "hadley@rstudio.com"),
+      person(given = "RStudio",
+             role = "cph"))
+Description: Functions for modelling that help you seamlessly
+    integrate modelling into a pipeline of data manipulation and
+    visualisation.
 License: GPL-3
-URL: https://modelr.tidyverse.org, https://github.com/hadley/modelr
+URL: https://modelr.tidyverse.org,
+    https://github.com/hadley/modelr
 BugReports: https://github.com/hadley/modelr/issues
 Depends: 
     R (>= 3.1)
@@ -17,14 +22,15 @@ Imports:
     dplyr,
     magrittr,
     purrr (>= 0.2.2),
+    rlang (>= 0.2.0),
     tibble,
-    tidyr (>= 0.8.0),
-    rlang (>= 0.2.0)
+    tidyr (>= 0.8.0)
 Suggests: 
     compiler,
     covr,
     ggplot2,
     testthat
+Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
