--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,12 @@ matrix:
   - r: release
     after_success:
     - Rscript -e 'covr::codecov()'
+  - r: release
+    name: tidyr-devel
+    before_script: Rscript -e "remotes::install_github('tidyverse/tidyr')"
   - r: oldrel
+  - r: 3.4
   - r: 3.3
     warnings_are_errors: false
   - r: 3.2
     warnings_are_errors: false
-  # - r: 3.1 - tidyr, broom
