--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,8 @@ Imports:
     purrr (>= 0.2.2),
     rlang (>= 0.2.0),
     tibble,
-    tidyr (>= 0.8.0)
+    tidyr (>= 0.8.0),
+    tidyselect
 Suggests: 
     compiler,
     covr,
