--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,13 +19,13 @@ Depends:
     R (>= 3.2)
 Imports: 
     broom,
-    dplyr,
     magrittr,
     purrr (>= 0.2.2),
     rlang (>= 0.2.0),
     tibble,
     tidyr (>= 0.8.0),
-    tidyselect
+    tidyselect,
+    vctrs
 Suggests: 
     compiler,
     covr,
