--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,13 +1,20 @@
 url: https://modelr.tidyverse.org
 
+template:
+  package: tidytemplate
+  bootstrap: 5
+
+  includes:
+    in_header: |
+      <script defer data-domain="modelr.tidyverse.org,all.tidyverse.org" src="https://plausible.io/js/plausible.js"></script>
+
+development:
+  mode: auto
+
 home:
-  strip_header: true
   links:
     - text: Learn more
       href: http://r4ds.had.co.nz/model-basics.html
-
-template:
-  package: tidytemplate
 
 reference:
 
