--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,14 @@
 Package: modelr
 Title: Modelling Functions that Work with the Pipe
 Version: 0.1.8.9000
-Authors@R: 
-    c(person(given = "Hadley",
-             family = "Wickham",
-             role = c("aut", "cre"),
-             email = "hadley@rstudio.com"),
-      person(given = "RStudio",
-             role = "cph"))
-Description: Functions for modelling that help you seamlessly
-    integrate modelling into a pipeline of data manipulation and
-    visualisation.
+Authors@R: c(
+    person("Hadley", "Wickham", , "hadley@rstudio.com", role = c("aut", "cre")),
+    person("RStudio", role = c("cph", "fnd"))
+  )
+Description: Functions for modelling that help you seamlessly integrate
+    modelling into a pipeline of data manipulation and visualisation.
 License: GPL-3
-URL: https://modelr.tidyverse.org,
-    https://github.com/tidyverse/modelr
+URL: https://modelr.tidyverse.org, https://github.com/tidyverse/modelr
 BugReports: https://github.com/tidyverse/modelr/issues
 Depends: 
     R (>= 3.2)
@@ -31,6 +26,7 @@ Suggests:
     covr,
     ggplot2,
     testthat
+Config/Needs/website: tidyverse/tidytemplate
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
