--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,9 +25,10 @@ Suggests:
     compiler,
     covr,
     ggplot2,
-    testthat
+    testthat (>= 3.0.0)
 Config/Needs/website: tidyverse/tidytemplate
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
+Config/testthat/edition: 3
